...
            </objects>
            <point key="canvasLocation" x="265" y="-693"/>
        </scene>
        <!--Build-->
        <scene sceneID="KoO-kq-7DR">
            <objects>
                <viewController restorationIdentifier="buildViewController" storyboardIdentifier="buildViewController" title="Build" id="wb6-ZE-ej2" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="BXq-LH-kwl"/>
                        <viewControllerLayoutGuide type="bottom" id="jel-hk-P0J"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="mJz-qL-7eL">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
            </objects>
            <point key="canvasLocation" x="3936" y="-694"/>
        </scene>
        <!--Test-->
        <scene sceneID="dfA-p2-kVb">
            <objects>
                <viewController restorationIdentifier="testViewController" storyboardIdentifier="testViewController" title="Test" id="I3A-0X-sql" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="AJK-mN-NzV"/>
                        <viewControllerLayoutGuide type="bottom" id="cDd-sO-K1R"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Ha7-N2-Sfp">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
            </objects>
            <point key="canvasLocation" x="4656.521739130435" y="-693.75"/>
        </scene>
        <!--Distribute-->
        <scene sceneID="HXv-Ig-Ehl">
            <objects>
                <viewController restorationIdentifier="distributeViewController" storyboardIdentifier="distributeViewController" title="Distribute" id="VFF-65-64h" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ISU-od-pKP"/>
                        <viewControllerLayoutGuide type="bottom" id="X0F-SN-dBf"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="xvq-b8-qkt">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
            </objects>
            <point key="canvasLocation" x="1112" y="-694"/>
        </scene>
        <!--Crashes-->
        <scene sceneID="Uek-HK-ge3">
            <objects>
                <viewController restorationIdentifier="crashViewController" storyboardIdentifier="crashViewController" title="Crashes" id="d0p-KN-UDt" customClass="CrashViewController" customModule="sampleapp_ios_swift" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="z07-l9-cKJ"/>
                        <viewControllerLayoutGuide type="bottom" id="g4g-jR-bxF"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="EDH-RX-mLZ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsp-Uf-2bG">
                                        <rect key="frame" x="29" y="364" width="356" height="60"/>
                                        <color key="backgroundColor" red="0.99963909390000005" green="1" blue="0.99975615740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fatalErrorButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="5Cx-Cr-O1P"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Send a sample crash">
                                            <color key="titleColor" red="0.12852352859999999" green="0.12865498659999999" blue="0.12854391339999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
